-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0 RC
-
None
-
Qt Creator 17.0.2, Yocto scarthgap 5.0.11, target yocto build content attached.
-
-
871fc858a (6.10), c58df094d (6.10.0), a08e8e4dd (tqtc/lts-6.8), 7d252c0ee (dev), b1b2357e2 (6.9.3), dca4640a9 (tqtc/lts-6.8.5)
Trying to play video on Media Player example result in "green screen" on video playback area. Audio plays normally. Qt Creator output shows:
14:02:03: Starting /usr/bin/appcontroller /usr/bin/MediaPlayerApp on Boot to Qt device b2qt-apalis-imx6-cac47210a3d84e9... "FB_MULTI_BUFFER" "2" "QTWEBENGINE_DISABLE_SANDBOX" "1" "QT_IM_MODULE" "qtvirtualkeyboard" "QT_QPA_EGLFS_FORCEVSYNC" "1" "QT_QPA_EGLFS_KMS_ATOMIC" "1" "QT_QPA_EGLFS_KMS_CONFIG" "/etc/kms.conf" "QT_QPA_PLATFORM" "eglfs" "QT_WAYLAND_HARDWARE_INTEGRATION" "linux-dmabuf-unstable-v1" "/usr/bin/MediaPlayerApp" QList() qt.multimedia.gstreamer: Using Qt multimedia with GStreamer version: "GStreamer 1.22.12"(MediaPlayerApp:2097): GStreamer-CRITICAL **: 19:52:23.280: gst_buffer_peek_memory: assertion 'idx < GST_BUFFER_MEM_LEN (buffer)' failed(MediaPlayerApp:2097): GStreamer-Allocators-CRITICAL **: 19:52:23.280: gst_is_dmabuf_memory: assertion 'mem != NULL' failed(MediaPlayerApp:2097): GStreamer-Allocators-CRITICAL **: 19:52:23.280: gst_dmabuf_memory_get_fd: assertion 'gst_is_dmabuf_memory (mem)' failed could not create EGL image for plane 1 3003
apalis-imx6 build configuration attacahed.
- is duplicated by
-
QTBUG-140347 [Boot2Qt] Video played on i.MX 8M Mini EVK gas green overlay and gets stuck
-
- Closed
-
For Gerrit Dashboard: QTBUG-140431 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
678630,4 | GStreamer: Fix broken playback for unsupported dmabuf memory layouts | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
678669,3 | GStreamer: Fix broken playback for unsupported dmabuf memory layouts | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
678804,2 | GStreamer: Fix broken playback for unsupported dmabuf memory layouts | 6.10.0 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
678805,2 | GStreamer: Fix broken playback for unsupported dmabuf memory layouts | 6.9.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
678807,2 | GStreamer: Fix broken playback for unsupported dmabuf memory layouts | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
679057,2 | GStreamer: Fix broken playback for unsupported dmabuf memory layouts | tqtc/lts-6.8.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |